# sofialude

./: .gitignore  LICENSE  README.md  flake.nix  hie.yaml  sofialude.cabal
src/: Sofialude.hs
