cabal-version:      2.4
name:               sofialude
version:            0.1.0.0
license:            MIT
copyright:          2021 Sofia M.A
maintainer:         sofia.ma@protonmail.com
author:             Sofia M.A
-- category:         
-- synopsis:
-- description:
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library sofialude
  build-depends:
    align
    , base
    , bytestring
    , comonad
    , containers
    , data-fix
    , functor-combinators
    , lens
    , mtl
    , profunctors
    , recursion-schemes
    , relude
    , smash
    , tagged
    , text
    , these
    , time
    , witherable


  mixins:
    base hiding (Prelude),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MonadComprehensions
    NoMonomorphismRestriction
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NumDecimals
    NumericUnderscores
    OverloadedLists
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    NoStarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeInType
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
