cabal-version:      2.4
name:               sofialude
version:            0.1.0.0
license:            MIT
copyright:          2021 Sofia M.A
maintainer:         sofia.ma@protonmail.com
author:             Sofia M.A

-- category:         
-- synopsis:
-- description:
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library
  exposed-modules: Sofialude

  build-depends:
    , array
    , assoc
    , base
    , bifunctors
    , bytestring
    , comonad
    , comonad-extras
    , containers
    , data-fix
    --, functor-combinators
    , lens
    , mtl
    , profunctors
    , recursion-schemes
    , relude                >=1.0
    , semialign
    , smash
    , tagged
    , text
    , these
    , time
    , unordered-containers
    , validation

  mixins:
    base hiding (Prelude),

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MonadComprehensions
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NumDecimals
    NumericUnderscores
    OverloadedLists
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeInType
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  hs-source-dirs:     src
  default-language:   Haskell2010
